--- a/templates/A.html
+++ b/templates/A.html
@@ -48,76 +48,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- TODO: Feel free to modify anything inside main.css -->
-    <link rel="stylesheet" href="../static/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../static/main.css">
 
     <title>cact-I + cact-you = cact-us</title>
   </head>
 
   <body>
-    <header>
-      <h1>cact-I + cact-you = cact-us</h1>
-      <!-- Ideas: making it pretty/look real, making it look reliable,
-          choosing different images, changing layout, etc. Show your creativity!
-          We want to see meaningful differences -->
-      <!-- Feel free to beautify the site, and/or update the content-->
-      <i>An online succulent store
-        for your inner plant lady.
-      </i>
-    </header>
+    <script src="./bootstrap.js"></script>
+    <nav class="navbar navbar-light navbar-expand-sm bg-light sticky-top nav-color">
+      <div class="mr-auto">
+        <h1>cact-I + cact-you = cact-us</h1>
+        <i>An online succulent store
+          for your inner plant lady.
+        </i>
+      </div>
+      <div id="cart-wrapper" class="ml-auto">
+        <a onclick='navigateToCheckout()'>
+        <span id="cart" class="fa-stack fa-2x has-badge" data-count="0">
+          <i class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
+        </span> CART
+      </a>
+      </div>
+    </nav>
 
     <!-- If you add any new buttons, you need to update the javascript file, for
     corresponding button id, so that clicks of that button could be logged -->
     <div class="content-pane">
-      <div class="vendor-wrapper" id="mp1">
+      <div class="vendor-wrapper">
         <img src="../static/coppercombo.png" class="vendor-photo" />
         <button class="vendor-book-button btn btn-primary" type="submit" id="mp1">
           Add To Cart
         </button>
         <span><span id="mp1-added">0</span> in cart</span>
-        <p>Stunning succulent combo, featuring 3 adolescent cacti in
-          industrial copper pots. <i>$9.99</i>
+        <p><i class="font-weight-bold h3">$9.99</i></p>
+        <p class="lead">Stunning succulent combo, featuring 3 adolescent cacti in
+          industrial copper pots. 
         </p>
       </div>
 
-      <div class="vendor-wrapper" id="mp2">
+      <div class="vendor-wrapper">
         <img src="../static/geoprickly.jpg" class="vendor-photo" />
         <button class="vendor-book-button btn btn-primary" type="submit" id="mp2">
           Add To Cart
         </button>
         <span><span id="mp2-added">0</span> in cart</span>
-        <p>Beautiful prickly pair in modern geometric pots. <i>$14.99</i>
+        <p><i class="font-weight-bold h3">$14.99</i></p>
+        <p class="lead">Beautiful prickly pair in modern geometric pots.
         </p>
       </div>
 
-      <div class="vendor-wrapper" id="mp3">
+      <div class="vendor-wrapper">
         <img src="../static/garden.jpg" class="vendor-photo" />
         <button class="vendor-book-button btn btn-primary" type="submit" id="mp3">
           Add To Cart
         </button>
         <span><span id="mp3-added">0</span> in cart</span>
-        <p>Cacti and succulent mini-garden in a congenial and rustic pot. <i>$25.99</i>
+        <p><i class="font-weight-bold h3">$25.99</i></p>
+        <p class="lead">Cacti and succulent mini-garden in a congenial and rustic pot.
         </p>
       </div>
 
-      <div class="vendor-wrapper" id="mp4">
+      <div class="vendor-wrapper">
         <img src="../static/garden-combo.jpg" class="vendor-photo" />
         <button class="vendor-book-button btn btn-primary" type="submit" id="mp4">
           Add To Cart
         </button>
         <span><span id="mp4-added">0</span> in cart</span>
-        <p>Cacti, succulent, and garden combo in handcrafted pots. <i>$34.99</i>
+        <p><i class="font-weight-bold h3">$34.99</i></p>
+        <p class="lead">Cacti, succulent, and garden combo in handcrafted pots.
         </p>
-      </div>
-
-      <div id="cart-wrapper">
-        <a onclick='navigateToCheckout()'>
-        <span id="cart" class="fa-stack fa-2x has-badge" data-count="0">
-          <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
-          <i class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
-        </span> CART
-      </a>
       </div>
     </div>
 
