--- a/templates/B.html
+++ b/templates/B.html
@@ -48,9 +48,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- TODO: Feel free to modify anything inside main.css -->
-    <link rel="stylesheet" href="../static/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../static/main.css">
 
     <title>cact-I + cact-you = cact-us</title>
   </head>
@@ -69,7 +70,7 @@
 
     <!-- If you add any new buttons, you need to update the javascript file, for
     corresponding button id, so that clicks of that button could be logged -->
-    <div class="content-pane">
+    <div class="content-pane px-auto">
       <div class="vendor-wrapper" id="mp1">
         <img src="../static/coppercombo.png" class="vendor-photo" />
         <button class="vendor-book-button btn btn-primary" type="submit" id="mp1">
@@ -77,8 +78,9 @@
         </button>
         <span><span id="mp1-added">0</span> in cart</span>
         <p>Stunning succulent combo, featuring 3 adolescent cacti in
-          industrial copper pots. <i>$9.99</i>
+          industrial copper pots. 
         </p>
+        <i class="font-weight-bold h3">$9.99</i>
       </div>
 
       <div class="vendor-wrapper" id="mp2">
@@ -87,8 +89,9 @@
           Add To Cart
         </button>
         <span><span id="mp2-added">0</span> in cart</span>
-        <p>Beautiful prickly pair in modern geometric pots. <i>$14.99</i>
+        <p>Beautiful prickly pair in modern geometric pots. 
         </p>
+        <i class="font-weight-bold h3">$14.99</i>
       </div>
 
       <div class="vendor-wrapper" id="mp3">
@@ -97,8 +100,9 @@
           Add To Cart
         </button>
         <span><span id="mp3-added">0</span> in cart</span>
-        <p>Cacti and succulent mini-garden in a congenial and rustic pot. <i>$25.99</i>
+        <p>Cacti and succulent mini-garden in a congenial and rustic pot. 
         </p>
+        <i class="font-weight-bold h3">$25.99</i>
       </div>
 
       <div class="vendor-wrapper" id="mp4">
@@ -107,16 +111,16 @@
           Add To Cart
         </button>
         <span><span id="mp4-added">0</span> in cart</span>
-        <p>Cacti, succulent, and garden combo in handcrafted pots. <i>$34.99</i>
+        <p>Cacti, succulent, and garden combo in handcrafted pots. 
         </p>
+        <i class="font-weight-bold h3">$34.99</i>
       </div>
 
-      <div id="cart-wrapper">
-        <a onclick='navigateToCheckout()'>
+      <div id="cart-wrapper" class="d-flex flex-row-reverse">
+        <a onclick='navigateToCheckout()' class="px-5">
         <span id="cart" class="fa-stack fa-2x has-badge" data-count="0">
-          <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
           <i class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
-        </span> CART
+        </span> CHECKOUT
       </a>
       </div>
     </div>
