--- a/templates/A.html
+++ b/templates/A.html
@@ -49,7 +49,7 @@
 
     <!-- TODO: Feel free to modify anything inside main.css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="../static/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../static/main.css">
 
@@ -57,7 +57,7 @@
   </head>
 
   <body>
-    <script src="./bootstrap.js"></script>
+    <script src="../static/bootstrap.js"></script>
     <nav class="navbar navbar-light navbar-expand-sm bg-light sticky-top nav-color">
       <div class="mr-auto">
         <h1>cact-I + cact-you = cact-us</h1>
@@ -65,7 +65,7 @@
           for your inner plant lady.
         </i>
       </div>
-      <div id="cart-wrapper" class="ml-auto">
+      <div id="cart-wrapper" class="ml-auto mx-5">
         <a onclick='navigateToCheckout()'>
         <span id="cart" class="fa-stack fa-2x has-badge" data-count="0">
           <i class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
