--- a/templates/B.html
+++ b/templates/B.html
@@ -49,7 +49,7 @@
 
     <!-- TODO: Feel free to modify anything inside main.css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="../static/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../static/main.css">
 
